--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "ci": "^2.3.0",
+    "react": "^19.2.4"
   }
 }
